@@ -2596,15 +2596,15 @@
         {
         "Name" = "8:Microsoft Visual Studio"
         "ProductName" = "8:Squealer 2018"
-        "ProductCode" = "8:{62ACC0FE-7B9B-4EF4-90D6-3E7D104D26C5}"
-        "PackageCode" = "8:{469EFE90-C642-452A-94F0-9E82E5EB1FF7}"
+        "ProductCode" = "8:{39DA67B4-267F-4F9E-8C03-1B35EA190A91}"
+        "PackageCode" = "8:{9546D477-914A-4EB7-8CFE-61ED7CBF8D2B}"
         "UpgradeCode" = "8:{1D6B365A-8443-4FE0-BF17-8DD0D6C149E0}"
         "AspNetVersion" = "8:4.0.30319.0"
         "RestartWWWService" = "11:FALSE"
         "RemovePreviousVersions" = "11:TRUE"
         "DetectNewerInstalledVersion" = "11:TRUE"
         "InstallAllUsers" = "11:FALSE"
-        "ProductVersion" = "8:1.1.12"
+        "ProductVersion" = "8:1.1.13"
         "Manufacturer" = "8:Philip Wright"
         "ARPHELPTELEPHONE" = "8:"
         "ARPHELPLINK" = "8:"
